# mcp-user-stories

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DATABASE_SETUP.md  LICENSE  MCP_SERVER.md  README.md  TESTING_SUMMARY.md  run-mcp-server.sh  sqlx-data.json
.sqlx/: query-082a15665fbf7f9d16a3d7a0120bbf9c458c534f47b2e9905fc0effddd042b27.json  query-301e67f67b3271af17f649796051fef16a3000af4626d5495d5bac67364bbaed.json  query-343a68240df53a7c4e852e1fab42ae4b3f1fe54fac166691ad763c1a91d09ee5.json  query-437a6e1a8272f968bc1c9fb6eae447ee231a447ddea469e816d90e15ef190701.json  query-447fb5091726f3210b0c1b3c5177cac4faac7ed4977c039a553e0cae0cac7423.json  query-4ba17703c1ec15ca6ae3cbc1ea515c119b1ac09c599169cef05c6252d8967fc8.json  query-54984bd8854feecc3b65d51467033510fedf1381dc3e6e668506ea3760fbf72e.json  query-5ff43f40973961be847b1faa255c484200e10fb8bb33f17768441ac54ae28334.json  query-61e35020a05d35432da0163bc77386cd4ad44a5a8c4e19144bafeeacdadc83d0.json  query-64dafb14f5d3109db606de8ef817212f9f568071fd0332afae54041a70637e02.json  query-671bc68b393d9b1c31a5548d8a0c176432c7dd28d3b902f5db089872cbe29489.json  query-7a092044e6e516548512cc5c865684e9c5d4d6aa285c81c45c1ffee01a44c67a.json  query-8b5e402464d4a83984417d387d232e1c57e43fe3970e20eb7dfa2e329fbf985a.json  query-97ebdb5857fc10d00bdef473220aadf8d814d6ead1a2e37fa36ac40892e18cc2.json  query-9cc36f10092811a6591311de51710eb35637defbe3f13f216cbf08a569daa549.json  query-aba8b2b43394394aba130094ae113081b604f30b5c653000109a2c227ca82d54.json  query-c604c13a5abb49fb804ac7b469375fa257c8bc6fed2b5c9a5697e143095c27f8.json  query-c6fe1c0d0a6e1e1b54177734207c4cf71ad49368070170eca25a90e733b39a2f.json  query-dcead0c14ce4716c10b3f1258bf0a9d2179a14e70403cf1933352c4d81295784.json  query-e6323e4b1d6196cfd641f60a7d7b13524d899b3ba46aec8663ada4a09c67748a.json
docs/: MACRO_IMPLEMENTATION_COMPLETE.md  MIGRATION_COMPLETE.md  RMCP_MACROS_COMPARISON.md  RMCP_MACROS_README.md  TESTING.md
(+23 files in other folders)
