[package]
name = "mcp-user-stories"
version = "0.1.0"
edition = "2021"
description = "A comprehensive Rust library for managing user stories and acceptance criteria with CRUD operations, designed for multi-agent LLM systems"
license = "MIT"
repository = "https://github.com/nickmartinwebdev/mcp-user-stories"
homepage = "https://github.com/nickmartinwebdev/mcp-user-stories"
documentation = "https://docs.rs/mcp-user-stories"
readme = "README.md"
keywords = ["user-stories", "acceptance-criteria", "agile", "llm", "mcp"]
categories = ["database", "development-tools", "api-bindings"]
authors = ["Nicholas Martin <nicholasmartin@macbookair.t-com.me>"]

default-run = "mcp-user-stories"

[[bin]]
name = "mcp-server"
path = "src/bin/mcp-server.rs"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate", "macros"] }
tokio = { version = "1.47", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
rmcp = { version = "0.6", features = ["macros", "server", "client", "transport-io", "schemars"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
once_cell = "1.19"
